--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,502 @@ PA3/GoogleNews-vectors-rcv_vocab.txt.tar
 PA3/EN-wform.w.2.ppmi.svd.500.rcv_vocab.txt.tar
 PA3/EN-wform.w.2.ppmi.svd.500.rcv_vocab-1.txt.tar.zip
 PA3/dist_sim_data.txt
+PA2/brown/cats.txt
+PA2/brown/CONTENTS
+PA2/brown/README
+PA2/brown/dev/ca37
+PA2/brown/dev/ca38
+PA2/brown/dev/ca39
+PA2/brown/dev/ca40
+PA2/brown/dev/cb22
+PA2/brown/dev/cb23
+PA2/brown/dev/cb24
+PA2/brown/dev/cc14
+PA2/brown/dev/cc15
+PA2/brown/dev/cd14
+PA2/brown/dev/cd15
+PA2/brown/dev/ce29
+PA2/brown/dev/ce30
+PA2/brown/dev/ce31
+PA2/brown/dev/ce32
+PA2/brown/dev/cf39
+PA2/brown/dev/cf40
+PA2/brown/dev/cf41
+PA2/brown/dev/cf42
+PA2/brown/dev/cf43
+PA2/brown/dev/cg60
+PA2/brown/dev/cg61
+PA2/brown/dev/cg62
+PA2/brown/dev/cg63
+PA2/brown/dev/cg64
+PA2/brown/dev/cg65
+PA2/brown/dev/cg66
+PA2/brown/dev/cg67
+PA2/brown/dev/ch25
+PA2/brown/dev/ch26
+PA2/brown/dev/ch27
+PA2/brown/dev/cj65
+PA2/brown/dev/cj66
+PA2/brown/dev/cj67
+PA2/brown/dev/cj68
+PA2/brown/dev/cj69
+PA2/brown/dev/cj70
+PA2/brown/dev/cj71
+PA2/brown/dev/cj72
+PA2/brown/dev/ck24
+PA2/brown/dev/ck25
+PA2/brown/dev/ck26
+PA2/brown/dev/cl21
+PA2/brown/dev/cl22
+PA2/brown/dev/cm05
+PA2/brown/dev/cn24
+PA2/brown/dev/cn25
+PA2/brown/dev/cn26
+PA2/brown/dev/cp24
+PA2/brown/dev/cp25
+PA2/brown/dev/cp26
+PA2/brown/dev/cr08
+PA2/brown/train/ca01
+PA2/brown/train/ca02
+PA2/brown/train/ca03
+PA2/brown/train/ca04
+PA2/brown/train/ca05
+PA2/brown/train/ca06
+PA2/brown/train/ca07
+PA2/brown/train/ca08
+PA2/brown/train/ca09
+PA2/brown/train/ca10
+PA2/brown/train/ca11
+PA2/brown/train/ca12
+PA2/brown/train/ca13
+PA2/brown/train/ca14
+PA2/brown/train/ca15
+PA2/brown/train/ca16
+PA2/brown/train/ca17
+PA2/brown/train/ca18
+PA2/brown/train/ca19
+PA2/brown/train/ca20
+PA2/brown/train/ca21
+PA2/brown/train/ca22
+PA2/brown/train/ca23
+PA2/brown/train/ca24
+PA2/brown/train/ca25
+PA2/brown/train/ca26
+PA2/brown/train/ca27
+PA2/brown/train/ca28
+PA2/brown/train/ca29
+PA2/brown/train/ca30
+PA2/brown/train/ca31
+PA2/brown/train/ca32
+PA2/brown/train/ca33
+PA2/brown/train/ca34
+PA2/brown/train/ca35
+PA2/brown/train/ca36
+PA2/brown/train/cb01
+PA2/brown/train/cb02
+PA2/brown/train/cb03
+PA2/brown/train/cb04
+PA2/brown/train/cb05
+PA2/brown/train/cb06
+PA2/brown/train/cb07
+PA2/brown/train/cb08
+PA2/brown/train/cb09
+PA2/brown/train/cb10
+PA2/brown/train/cb11
+PA2/brown/train/cb12
+PA2/brown/train/cb13
+PA2/brown/train/cb14
+PA2/brown/train/cb15
+PA2/brown/train/cb16
+PA2/brown/train/cb17
+PA2/brown/train/cb18
+PA2/brown/train/cb19
+PA2/brown/train/cb20
+PA2/brown/train/cb21
+PA2/brown/train/cc01
+PA2/brown/train/cc02
+PA2/brown/train/cc03
+PA2/brown/train/cc04
+PA2/brown/train/cc05
+PA2/brown/train/cc06
+PA2/brown/train/cc07
+PA2/brown/train/cc08
+PA2/brown/train/cc09
+PA2/brown/train/cc10
+PA2/brown/train/cc11
+PA2/brown/train/cc12
+PA2/brown/train/cc13
+PA2/brown/train/cd01
+PA2/brown/train/cd02
+PA2/brown/train/cd03
+PA2/brown/train/cd04
+PA2/brown/train/cd05
+PA2/brown/train/cd06
+PA2/brown/train/cd07
+PA2/brown/train/cd08
+PA2/brown/train/cd09
+PA2/brown/train/cd10
+PA2/brown/train/cd11
+PA2/brown/train/cd12
+PA2/brown/train/cd13
+PA2/brown/train/ce01
+PA2/brown/train/ce02
+PA2/brown/train/ce03
+PA2/brown/train/ce04
+PA2/brown/train/ce05
+PA2/brown/train/ce06
+PA2/brown/train/ce07
+PA2/brown/train/ce08
+PA2/brown/train/ce09
+PA2/brown/train/ce10
+PA2/brown/train/ce11
+PA2/brown/train/ce12
+PA2/brown/train/ce13
+PA2/brown/train/ce14
+PA2/brown/train/ce15
+PA2/brown/train/ce16
+PA2/brown/train/ce17
+PA2/brown/train/ce18
+PA2/brown/train/ce19
+PA2/brown/train/ce20
+PA2/brown/train/ce21
+PA2/brown/train/ce22
+PA2/brown/train/ce23
+PA2/brown/train/ce24
+PA2/brown/train/ce25
+PA2/brown/train/ce26
+PA2/brown/train/ce27
+PA2/brown/train/ce28
+PA2/brown/train/cf01
+PA2/brown/train/cf02
+PA2/brown/train/cf03
+PA2/brown/train/cf04
+PA2/brown/train/cf05
+PA2/brown/train/cf06
+PA2/brown/train/cf07
+PA2/brown/train/cf08
+PA2/brown/train/cf09
+PA2/brown/train/cf10
+PA2/brown/train/cf11
+PA2/brown/train/cf12
+PA2/brown/train/cf13
+PA2/brown/train/cf14
+PA2/brown/train/cf15
+PA2/brown/train/cf16
+PA2/brown/train/cf17
+PA2/brown/train/cf18
+PA2/brown/train/cf19
+PA2/brown/train/cf20
+PA2/brown/train/cf21
+PA2/brown/train/cf22
+PA2/brown/train/cf23
+PA2/brown/train/cf24
+PA2/brown/train/cf25
+PA2/brown/train/cf26
+PA2/brown/train/cf27
+PA2/brown/train/cf28
+PA2/brown/train/cf29
+PA2/brown/train/cf30
+PA2/brown/train/cf31
+PA2/brown/train/cf32
+PA2/brown/train/cf33
+PA2/brown/train/cf34
+PA2/brown/train/cf35
+PA2/brown/train/cf36
+PA2/brown/train/cf37
+PA2/brown/train/cf38
+PA2/brown/train/cg01
+PA2/brown/train/cg02
+PA2/brown/train/cg03
+PA2/brown/train/cg04
+PA2/brown/train/cg05
+PA2/brown/train/cg06
+PA2/brown/train/cg07
+PA2/brown/train/cg08
+PA2/brown/train/cg09
+PA2/brown/train/cg10
+PA2/brown/train/cg11
+PA2/brown/train/cg12
+PA2/brown/train/cg13
+PA2/brown/train/cg14
+PA2/brown/train/cg15
+PA2/brown/train/cg16
+PA2/brown/train/cg17
+PA2/brown/train/cg18
+PA2/brown/train/cg19
+PA2/brown/train/cg20
+PA2/brown/train/cg21
+PA2/brown/train/cg22
+PA2/brown/train/cg23
+PA2/brown/train/cg24
+PA2/brown/train/cg25
+PA2/brown/train/cg26
+PA2/brown/train/cg27
+PA2/brown/train/cg28
+PA2/brown/train/cg29
+PA2/brown/train/cg30
+PA2/brown/train/cg31
+PA2/brown/train/cg32
+PA2/brown/train/cg33
+PA2/brown/train/cg34
+PA2/brown/train/cg35
+PA2/brown/train/cg36
+PA2/brown/train/cg37
+PA2/brown/train/cg38
+PA2/brown/train/cg39
+PA2/brown/train/cg40
+PA2/brown/train/cg41
+PA2/brown/train/cg42
+PA2/brown/train/cg43
+PA2/brown/train/cg44
+PA2/brown/train/cg45
+PA2/brown/train/cg46
+PA2/brown/train/cg47
+PA2/brown/train/cg48
+PA2/brown/train/cg49
+PA2/brown/train/cg50
+PA2/brown/train/cg51
+PA2/brown/train/cg52
+PA2/brown/train/cg53
+PA2/brown/train/cg54
+PA2/brown/train/cg55
+PA2/brown/train/cg56
+PA2/brown/train/cg57
+PA2/brown/train/cg58
+PA2/brown/train/cg59
+PA2/brown/train/ch01
+PA2/brown/train/ch02
+PA2/brown/train/ch03
+PA2/brown/train/ch04
+PA2/brown/train/ch05
+PA2/brown/train/ch06
+PA2/brown/train/ch07
+PA2/brown/train/ch08
+PA2/brown/train/ch09
+PA2/brown/train/ch10
+PA2/brown/train/ch11
+PA2/brown/train/ch12
+PA2/brown/train/ch13
+PA2/brown/train/ch14
+PA2/brown/train/ch15
+PA2/brown/train/ch16
+PA2/brown/train/ch17
+PA2/brown/train/ch18
+PA2/brown/train/ch19
+PA2/brown/train/ch20
+PA2/brown/train/ch21
+PA2/brown/train/ch22
+PA2/brown/train/ch23
+PA2/brown/train/ch24
+PA2/brown/train/cj01
+PA2/brown/train/cj02
+PA2/brown/train/cj03
+PA2/brown/train/cj04
+PA2/brown/train/cj05
+PA2/brown/train/cj06
+PA2/brown/train/cj07
+PA2/brown/train/cj08
+PA2/brown/train/cj09
+PA2/brown/train/cj10
+PA2/brown/train/cj11
+PA2/brown/train/cj12
+PA2/brown/train/cj13
+PA2/brown/train/cj14
+PA2/brown/train/cj15
+PA2/brown/train/cj16
+PA2/brown/train/cj17
+PA2/brown/train/cj18
+PA2/brown/train/cj19
+PA2/brown/train/cj20
+PA2/brown/train/cj21
+PA2/brown/train/cj22
+PA2/brown/train/cj23
+PA2/brown/train/cj24
+PA2/brown/train/cj25
+PA2/brown/train/cj26
+PA2/brown/train/cj27
+PA2/brown/train/cj28
+PA2/brown/train/cj29
+PA2/brown/train/cj30
+PA2/brown/train/cj31
+PA2/brown/train/cj32
+PA2/brown/train/cj33
+PA2/brown/train/cj34
+PA2/brown/train/cj35
+PA2/brown/train/cj36
+PA2/brown/train/cj37
+PA2/brown/train/cj38
+PA2/brown/train/cj39
+PA2/brown/train/cj40
+PA2/brown/train/cj41
+PA2/brown/train/cj42
+PA2/brown/train/cj43
+PA2/brown/train/cj44
+PA2/brown/train/cj45
+PA2/brown/train/cj46
+PA2/brown/train/cj47
+PA2/brown/train/cj48
+PA2/brown/train/cj49
+PA2/brown/train/cj50
+PA2/brown/train/cj51
+PA2/brown/train/cj52
+PA2/brown/train/cj53
+PA2/brown/train/cj54
+PA2/brown/train/cj55
+PA2/brown/train/cj56
+PA2/brown/train/cj57
+PA2/brown/train/cj58
+PA2/brown/train/cj59
+PA2/brown/train/cj60
+PA2/brown/train/cj61
+PA2/brown/train/cj62
+PA2/brown/train/cj63
+PA2/brown/train/cj64
+PA2/brown/train/ck01
+PA2/brown/train/ck02
+PA2/brown/train/ck03
+PA2/brown/train/ck04
+PA2/brown/train/ck05
+PA2/brown/train/ck06
+PA2/brown/train/ck07
+PA2/brown/train/ck08
+PA2/brown/train/ck09
+PA2/brown/train/ck10
+PA2/brown/train/ck11
+PA2/brown/train/ck12
+PA2/brown/train/ck13
+PA2/brown/train/ck14
+PA2/brown/train/ck15
+PA2/brown/train/ck16
+PA2/brown/train/ck17
+PA2/brown/train/ck18
+PA2/brown/train/ck19
+PA2/brown/train/ck20
+PA2/brown/train/ck21
+PA2/brown/train/ck22
+PA2/brown/train/ck23
+PA2/brown/train/cl01
+PA2/brown/train/cl02
+PA2/brown/train/cl03
+PA2/brown/train/cl04
+PA2/brown/train/cl05
+PA2/brown/train/cl06
+PA2/brown/train/cl07
+PA2/brown/train/cl08
+PA2/brown/train/cl09
+PA2/brown/train/cl10
+PA2/brown/train/cl11
+PA2/brown/train/cl12
+PA2/brown/train/cl13
+PA2/brown/train/cl14
+PA2/brown/train/cl15
+PA2/brown/train/cl16
+PA2/brown/train/cl17
+PA2/brown/train/cl18
+PA2/brown/train/cl19
+PA2/brown/train/cl20
+PA2/brown/train/cm01
+PA2/brown/train/cm02
+PA2/brown/train/cm03
+PA2/brown/train/cm04
+PA2/brown/train/cn01
+PA2/brown/train/cn02
+PA2/brown/train/cn03
+PA2/brown/train/cn04
+PA2/brown/train/cn05
+PA2/brown/train/cn06
+PA2/brown/train/cn07
+PA2/brown/train/cn08
+PA2/brown/train/cn09
+PA2/brown/train/cn10
+PA2/brown/train/cn11
+PA2/brown/train/cn12
+PA2/brown/train/cn13
+PA2/brown/train/cn14
+PA2/brown/train/cn15
+PA2/brown/train/cn16
+PA2/brown/train/cn17
+PA2/brown/train/cn18
+PA2/brown/train/cn19
+PA2/brown/train/cn20
+PA2/brown/train/cn21
+PA2/brown/train/cn22
+PA2/brown/train/cn23
+PA2/brown/train/cp01
+PA2/brown/train/cp02
+PA2/brown/train/cp03
+PA2/brown/train/cp04
+PA2/brown/train/cp05
+PA2/brown/train/cp06
+PA2/brown/train/cp07
+PA2/brown/train/cp08
+PA2/brown/train/cp09
+PA2/brown/train/cp10
+PA2/brown/train/cp11
+PA2/brown/train/cp12
+PA2/brown/train/cp13
+PA2/brown/train/cp14
+PA2/brown/train/cp15
+PA2/brown/train/cp16
+PA2/brown/train/cp17
+PA2/brown/train/cp18
+PA2/brown/train/cp19
+PA2/brown/train/cp20
+PA2/brown/train/cp21
+PA2/brown/train/cp22
+PA2/brown/train/cp23
+PA2/brown/train/cr01
+PA2/brown/train/cr02
+PA2/brown/train/cr03
+PA2/brown/train/cr04
+PA2/brown/train/cr05
+PA2/brown/train/cr06
+PA2/brown/train/cr07
+PA2/brown_news/cats.txt
+PA2/brown_news/CONTENTS
+PA2/brown_news/README
+PA2/brown_news/dev/ca37
+PA2/brown_news/dev/ca38
+PA2/brown_news/dev/ca39
+PA2/brown_news/dev/ca40
+PA2/brown_news/train/ca01
+PA2/brown_news/train/ca02
+PA2/brown_news/train/ca03
+PA2/brown_news/train/ca04
+PA2/brown_news/train/ca05
+PA2/brown_news/train/ca06
+PA2/brown_news/train/ca07
+PA2/brown_news/train/ca08
+PA2/brown_news/train/ca09
+PA2/brown_news/train/ca10
+PA2/brown_news/train/ca11
+PA2/brown_news/train/ca12
+PA2/brown_news/train/ca13
+PA2/brown_news/train/ca14
+PA2/brown_news/train/ca15
+PA2/brown_news/train/ca16
+PA2/brown_news/train/ca17
+PA2/brown_news/train/ca18
+PA2/brown_news/train/ca19
+PA2/brown_news/train/ca20
+PA2/brown_news/train/ca21
+PA2/brown_news/train/ca22
+PA2/brown_news/train/ca23
+PA2/brown_news/train/ca24
+PA2/brown_news/train/ca25
+PA2/brown_news/train/ca26
+PA2/brown_news/train/ca27
+PA2/brown_news/train/ca28
+PA2/brown_news/train/ca29
+PA2/brown_news/train/ca30
+PA2/brown_news/train/ca31
+PA2/brown_news/train/ca32
+PA2/brown_news/train/ca33
+PA2/brown_news/train/ca34
+PA2/brown_news/train/ca35
+PA2/brown_news/train/ca36
+PA2/data_small/test/ca02
+PA2/data_small/test/ca05
+PA2/data_small/train/ca01
+PA2/data_small/train/ca03
+PA2/data_small/train/ca04
