--- a/.gitignore
+++ b/.gitignore
@@ -505,3 +505,5 @@ PA2/data_small/test/ca05
 PA2/data_small/train/ca01
 PA2/data_small/train/ca03
 PA2/data_small/train/ca04
+PA3/EN-wform.w.2.ppmi.svd.500.rcv_vocab.txt
+PA3/GoogleNews-vectors-rcv_vocab.txt
